--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context=".ui.GridActivity"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
     <org.oar.bytes.ui.components.grid.Grid2048
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"/>
+        android:layout_marginHorizontal="10dp" />
 
 </LinearLayout>
