--- a/app/src/main/res/layout/grid_tile.xml
+++ b/app/src/main/res/layout/grid_tile.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.GridActivity"
-    android:orientation="vertical">
+    android:layout_height="match_parent" >
 
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="TEST"
-    android:textColor="@color/black"/>
+    <TextView
+        android:id="@+id/value"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textSize="22sp"
+        android:textColor="@color/white" />
 
-</LinearLayout>
+</RelativeLayout>
