--- a/app/src/main/res/layout/component_level_panel.xml
+++ b/app/src/main/res/layout/component_level_panel.xml
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:textSize="16sp" />
 
-    <org.oar.bytes.ui.common.components.ProgressBarView
+    <org.oar.bytes.ui.common.components.levelpanel.ProgressBarView
         android:id="@+id/progressBar"
         android:layout_width="0dp"
         android:layout_height="46dp"
