--- a/app/src/main/res/layout/component_hints_bar.xml
+++ b/app/src/main/res/layout/component_hints_bar.xml
@@ -10,7 +10,7 @@
         android:layout_width="46dp"
         android:layout_height="46dp"
         android:gravity="center"
-        android:background="@color/shade00"
+        android:background="@color/itemDefaultBackground"
         android:text="R"
         android:textSize="16sp" />
 
