--- a/app/src/main/res/layout/component_level_panel.xml
+++ b/app/src/main/res/layout/component_level_panel.xml
@@ -10,7 +10,7 @@
         android:id="@+id/levelUpButton"
         android:layout_width="46dp"
         android:layout_height="46dp"
-        android:background="@color/shade00"
+        android:background="@color/itemDefaultBackground"
         android:gravity="center"
         android:textSize="16sp" />
 
@@ -25,7 +25,7 @@
         android:id="@+id/capacityUpButton"
         android:layout_width="46dp"
         android:layout_height="46dp"
-        android:background="@color/shade00"
+        android:background="@color/itemDefaultBackground"
         android:gravity="center"
         android:text="C"
         android:textSize="16sp" />
