--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,20 +7,18 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="itemDefaultBackground">#DDD</color>
 
-
-    <color name="shade00">#DDD</color>
-    <color name="shade01">#BBB</color>
-    <color name="shade02">#AAA</color>
-    <color name="shade03">#999</color>
-    <color name="shade04">#888</color>
-    <color name="shade05">#777</color>
-    <color name="shade06">#666</color>
-    <color name="shade07">#555</color>
-    <color name="shade08">#444</color>
-    <color name="shade09">#333</color>
-    <color name="shade10">#222</color>
-    <color name="shade11">#111</color>
+    <color name="shade01">#BABABA</color>
+    <color name="shade02">#A3A3A3</color>
+    <color name="shade03">#8D8D8D</color>
+    <color name="shade04">#767676</color>
+    <color name="shade05">#606060</color>
+    <color name="shade06">#494949</color>
+    <color name="shade07">#333</color>
+    <color name="shade08">#2A2A2A</color>
+    <color name="shade09">#202020</color>
+    <color name="shade10">#171717</color>
 
     <color name="bump01">#FFF</color>
     <color name="bump02">#FF7</color>
