Add hints progress

--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:paddingBottom="16dp" />
 
-    <org.oar.bytes.ui.common.components.HintsView
+    <org.oar.bytes.ui.common.components.hints.HintsView
         android:id="@+id/hintsPanel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
