--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,5 @@
 
     <color name="capacityColor">#9CE0FF</color>
     <color name="levelColor">#FFCAB2</color>
+    <color name="hintsColor">#B8DF8B</color>
 </resources>
