--- a/app/src/main/res/layout/component_level_panel.xml
+++ b/app/src/main/res/layout/component_level_panel.xml
@@ -12,7 +12,7 @@
         android:layout_height="46dp"
         android:background="@color/itemDefaultBackground"
         android:gravity="center"
-        android:textSize="16sp" />
+        android:textSize="18sp"/>
 
     <org.oar.bytes.ui.common.components.levelpanel.ProgressBarView
         android:id="@+id/progressBar"
@@ -21,13 +21,13 @@
         android:layout_weight="1"
         android:layout_marginHorizontal="16dp"/>
 
-    <TextView
+    <ImageView
         android:id="@+id/capacityUpButton"
         android:layout_width="46dp"
         android:layout_height="46dp"
-        android:background="@color/itemDefaultBackground"
+        android:padding="10dp"
         android:gravity="center"
-        android:text="C"
-        android:textSize="16sp" />
+        android:background="@color/itemDefaultBackground"
+        android:src="@drawable/battery_plus_24px" />
 
 </LinearLayout>
