--- a/app/src/main/res/layout/component_hints_bar.xml
+++ b/app/src/main/res/layout/component_hints_bar.xml
@@ -3,16 +3,38 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:orientation="horizontal" >
+
+    <org.oar.bytes.ui.common.components.hints.HintButtonView
+        android:id="@+id/addBtn"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:layout_marginHorizontal="8dp"
+        android:padding="10dp"
+        android:gravity="center"
+        android:background="@color/itemDefaultBackground"
+        android:src="@drawable/add_24px" />
+
 
     <org.oar.bytes.ui.common.components.hints.HintButtonView
         android:id="@+id/revertLastBtn"
         android:layout_width="46dp"
         android:layout_height="46dp"
+        android:layout_marginHorizontal="8dp"
         android:padding="10dp"
         android:gravity="center"
         android:background="@color/itemDefaultBackground"
         android:src="@drawable/undo_24px" />
+
+    <org.oar.bytes.ui.common.components.hints.HintButtonView
+        android:id="@+id/removeBtn"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:layout_marginHorizontal="8dp"
+        android:padding="10dp"
+        android:gravity="center"
+        android:background="@color/itemDefaultBackground"
+        android:src="@drawable/remove_24px" />
 
 </LinearLayout>
