--- a/app/src/main/res/layout/component_idle_panel.xml
+++ b/app/src/main/res/layout/component_idle_panel.xml
@@ -14,7 +14,7 @@
         android:layout_weight="1"
         android:layout_marginEnd="8dp"
         android:gravity="center"
-        android:background="@color/itemDefaultBackground">
+        android:background="@color/timePanelColor">
         <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
@@ -29,7 +29,7 @@
         android:layout_weight="1"
         android:layout_marginStart="8dp"
         android:gravity="center"
-        android:background="@color/shade01">
+        android:background="@color/speedPanelColor">
 
         <TextView
             android:id="@+id/speed"
