--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,30 +7,36 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="itemDefaultBackground">#DDD</color>
+    <color name="itemDefaultBackground">#E2E2E2</color>
 
-    <color name="shade01">#BABABA</color>
-    <color name="shade02">#A3A3A3</color>
-    <color name="shade03">#8D8D8D</color>
-    <color name="shade04">#767676</color>
-    <color name="shade05">#606060</color>
-    <color name="shade06">#494949</color>
-    <color name="shade07">#333</color>
-    <color name="shade08">#2A2A2A</color>
-    <color name="shade09">#202020</color>
-    <color name="shade10">#171717</color>
+    <color name="shade01">#FFCD4F</color>
+    <color name="shade02">#FFAA56</color>
+    <color name="shade03">#FF865C</color>
+
+    <color name="shade04">#FF6363</color>
+    <color name="shade05">#E35F8A</color>
+    <color name="shade06">#C75BB1</color>
+    <color name="shade07">#AB56D8</color>
+    <color name="shade08">#8F52FF</color>
+    <color name="shade09">#7540D7</color>
+    <color name="shade10">#5B2DAE</color>
+    <color name="shade11">#401B86</color>
+    <color name="shade12">#26085D</color>
 
     <color name="bump01">#FFF</color>
-    <color name="bump02">#FF7</color>
-    <color name="bump03">#7F7</color>
-    <color name="bump04">#7FF</color>
-    <color name="bump05">#77F</color>
-    <color name="bump06">#F7F</color>
-    <color name="bump07">#F77</color>
+    <color name="bump02">#EEE</color>
+    <color name="bump03">#DDD</color>
+    <color name="bump04">#CCC</color>
+    <color name="bump05">#BBB</color>
+    <color name="bump06">#AAA</color>
+    <color name="bump07">#999</color>
+
+    <color name="timePanelColor">#FFAD6E</color>
+    <color name="speedPanelColor">#FFC571</color>
 
     <color name="capacityColor">#9CE0FF</color>
     <color name="levelColor">#FFCAB2</color>
     <color name="hintsColor">#B8DF8B</color>
 
-    <color name="activeHintColor">#B325FF</color>
+    <color name="activeHintColor">#61A70F</color>
 </resources>
