--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,49 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M16.347,9.571l-4.517,0l-2.259,-2.258l-2.258,0l0,9.034l7.652,7.653l9.035,0l0,-6.776z"
+      android:fillAlpha="0.2"/>
+  <path
+      android:pathData="M14.089,14.089h2.259v2.259h-2.259z"
+      android:fillColor="#26085D"/>
+  <path
+      android:pathData="M11.83,14.089h2.259v2.259h-2.259z"
+      android:fillColor="#401B86"/>
+  <path
+      android:pathData="M9.571,14.089h2.259v2.259h-2.259z"
+      android:fillColor="#5B2DAE"/>
+  <path
+      android:pathData="M7.313,14.089h2.259v2.259h-2.259z"
+      android:fillColor="#7540D7"/>
+  <path
+      android:pathData="M7.313,11.83h2.259v2.259h-2.259z"
+      android:fillColor="#8F52FF"/>
+  <path
+      android:pathData="M9.571,11.83h2.259v2.259h-2.259z"
+      android:fillColor="#AB56D8"/>
+  <path
+      android:pathData="M11.83,11.83h2.259v2.259h-2.259z"
+      android:fillColor="#C75BB1"/>
+  <path
+      android:pathData="M14.089,11.83h2.259v2.259h-2.259z"
+      android:fillColor="#E35F8A"/>
+  <path
+      android:pathData="M14.089,9.571h2.259v2.259h-2.259z"
+      android:fillColor="#FF6363"/>
+  <path
+      android:pathData="M11.83,9.571h2.259v2.259h-2.259z"
+      android:fillColor="#FF865C"/>
+  <path
+      android:pathData="M9.571,9.571h2.259v2.259h-2.259z"
+      android:fillColor="#FFAA56"/>
+  <path
+      android:pathData="M7.313,9.571h2.259v2.259h-2.259z"
+      android:fillColor="#FFCD4F"/>
+  <path
+      android:pathData="M7.313,7.313h2.259v2.259h-2.259z"
+      android:fillColor="#FFCD4F"/>
 </vector>
