--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -5,6 +5,30 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     <path
-        android:fillColor="@color/itemDefaultBackground"
-        android:pathData="M0,0h108v108h-108z" />
+        android:pathData="M68.33,68.33h39.67v39.67h-39.67z"
+        android:fillColor="#5B2DAE"/>
+    <path
+        android:pathData="M39.67,68.33h28.67v39.67h-28.67z"
+        android:fillColor="#7540D7"/>
+    <path
+        android:pathData="M0,68.33h39.67v39.67h-39.67z"
+        android:fillColor="#AB56D8"/>
+    <path
+        android:pathData="M39.67,39.67h28.67v28.67h-28.67z"
+        android:fillColor="#C75BB1"/>
+    <path
+        android:pathData="M68.33,39.67h39.67v28.67h-39.67z"
+        android:fillColor="#E35F8A"/>
+    <path
+        android:pathData="M0,39.67h39.67v28.67h-39.67z"
+        android:fillColor="#FF6363"/>
+    <path
+        android:pathData="M68.33,0h39.67v39.67h-39.67z"
+        android:fillColor="#FF865C"/>
+    <path
+        android:pathData="M39.67,0h28.67v39.67h-28.67z"
+        android:fillColor="#FFAA56"/>
+    <path
+        android:pathData="M0,0h39.67v39.67h-39.67z"
+        android:fillColor="#FFCD4F"/>
 </vector>
