Set disabled color to upgrades

--- a/app/src/main/res/layout/fragment_time_energy.xml
+++ b/app/src/main/res/layout/fragment_time_energy.xml
@@ -10,6 +10,6 @@
         android:id="@+id/energyDeviceList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/component_device" />
+        tools:listitem="@layout/component_energy_device" />
 
 </LinearLayout>
