--- a/app/src/main/res/layout/component_energy_device.xml
+++ b/app/src/main/res/layout/component_energy_device.xml
@@ -9,7 +9,7 @@
     android:paddingVertical="12dp"
     android:layout_marginVertical="4dp"
     android:orientation="horizontal"
-    android:background="@color/speedPanelColor">
+    android:background="@color/timePanelColor">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -53,7 +53,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/speedPanelButtonColor"
+        android:background="@color/timePanelButtonColor"
         android:orientation="horizontal">
 
         <TextView
