--- a/app/src/main/res/layout/component_hints_button.xml
+++ b/app/src/main/res/layout/component_hints_button.xml
@@ -18,6 +18,7 @@
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="end"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:textStyle="bold"
