--- a/app/src/main/res/layout/component_hints_bar.xml
+++ b/app/src/main/res/layout/component_hints_bar.xml
@@ -15,6 +15,14 @@
         android:src="@drawable/add_24px" />
 
     <org.oar.bytes.ui.common.components.hints.HintButtonView
+        android:id="@+id/improveLower"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:layout_marginHorizontal="8dp"
+        android:background="@color/itemDefaultBackground"
+        android:src="@drawable/upgrade_24px" />
+
+    <org.oar.bytes.ui.common.components.hints.HintButtonView
         android:id="@+id/revertLastBtn"
         android:layout_width="46dp"
         android:layout_height="46dp"
