--- a/app/src/main/res/layout/component_hints_bar.xml
+++ b/app/src/main/res/layout/component_hints_bar.xml
@@ -12,7 +12,7 @@
         android:layout_height="46dp"
         android:layout_marginHorizontal="8dp"
         android:background="@color/itemDefaultBackground"
-        android:src="@drawable/add_24px" />
+        android:src="@drawable/ic_add_24px" />
 
     <org.oar.bytes.ui.common.components.hints.HintButtonView
         android:id="@+id/improveLower"
@@ -20,7 +20,7 @@
         android:layout_height="46dp"
         android:layout_marginHorizontal="8dp"
         android:background="@color/itemDefaultBackground"
-        android:src="@drawable/upgrade_24px" />
+        android:src="@drawable/ic_upgrade_24px" />
 
     <org.oar.bytes.ui.common.components.hints.HintButtonView
         android:id="@+id/revertLastBtn"
@@ -28,7 +28,7 @@
         android:layout_height="46dp"
         android:layout_marginHorizontal="8dp"
         android:background="@color/itemDefaultBackground"
-        android:src="@drawable/undo_24px" />
+        android:src="@drawable/ic_undo_24px" />
 
     <org.oar.bytes.ui.common.components.hints.HintButtonView
         android:id="@+id/swapBtn"
@@ -36,7 +36,7 @@
         android:layout_height="46dp"
         android:layout_marginHorizontal="8dp"
         android:background="@color/itemDefaultBackground"
-        android:src="@drawable/swap_24px" />
+        android:src="@drawable/ic_swap_24px" />
 
     <org.oar.bytes.ui.common.components.hints.HintButtonView
         android:id="@+id/removeBtn"
@@ -44,6 +44,6 @@
         android:layout_height="46dp"
         android:layout_marginHorizontal="8dp"
         android:background="@color/itemDefaultBackground"
-        android:src="@drawable/remove_24px" />
+        android:src="@drawable/ic_remove_24px" />
 
 </LinearLayout>
