--- a/app/src/main/res/layout/component_hints_button.xml
+++ b/app/src/main/res/layout/component_hints_button.xml
@@ -12,7 +12,7 @@
         android:layout_centerVertical="true"
         android:gravity="center"
         android:padding="10dp"
-        android:src="@drawable/swap_24px" />
+        android:src="@drawable/ic_swap_24px" />
 
     <TextView
         android:id="@+id/time"
