--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -17,23 +17,20 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp" />
 
-
     <org.oar.bytes.ui.common.pager.FragmentPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp" />
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-    <org.oar.bytes.ui.common.components.idlepanel.IdlePanelView
-        android:id="@+id/idle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"/>
+        <org.oar.bytes.ui.fragments.MainGridView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
-    <org.oar.bytes.ui.common.components.idlepanel.NavPanelView
-        android:id="@+id/nav"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"/>
+        <org.oar.bytes.ui.fragments.MainSettingsView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </org.oar.bytes.ui.common.pager.FragmentPager>
 
 </LinearLayout>
