--- a/app/src/main/res/layout/component_energy_device.xml
+++ b/app/src/main/res/layout/component_energy_device.xml
@@ -29,7 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/name" />
+            app:layout_constraintTop_toBottomOf="@id/name"
+            android:scrollbars="none" />
 
     </LinearLayout>
 
