--- a/app/src/main/res/layout/fragment_general_settings.xml
+++ b/app/src/main/res/layout/fragment_general_settings.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
+    <fragment
+        android:id="@+id/fragment_settings"
+        android:name="org.oar.bytes.ui.fragments.MainSettingsView$SettingsFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#5f00"
-        android:text="@string/action_settings" />
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
