Settings time selector

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,12 +1,12 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory app:title="@string/notifications_header">
-        <EditTextPreference
+        <org.oar.bytes.ui.common.TimePreference
             app:key="stop"
             app:defaultValue="20:30"
             app:title="@string/stop_time_title"
             app:useSimpleSummaryProvider="true" />
 
-        <EditTextPreference
+        <org.oar.bytes.ui.common.TimePreference
             app:key="start"
             app:defaultValue="6:30"
             app:title="@string/start_time_title"
