--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -4,11 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical"
-    android:layout_marginTop="32dp"
-    android:layout_marginBottom="16dp"
+    android:gravity="center"
+    android:layout_marginVertical="32dp"
     android:layout_marginHorizontal="16dp"
-
     tools:context=".ui.GridActivity"
     android:orientation="vertical" >
 
@@ -21,8 +19,7 @@
     <org.oar.bytes.ui.common.pager.FragmentPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent" >
 
         <org.oar.bytes.ui.fragments.MainGridView
             android:layout_width="match_parent"
