--- a/app/src/main/res/layout/fragment_general_grid.xml
+++ b/app/src/main/res/layout/fragment_general_grid.xml
@@ -8,9 +8,8 @@
     <org.oar.bytes.ui.common.pager.FragmentPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp" />
 
     <org.oar.bytes.ui.common.components.idlepanel.IdlePanelView
         android:id="@+id/idle"
