--- a/app/src/main/res/layout/fragment_grid.xml
+++ b/app/src/main/res/layout/fragment_grid.xml
@@ -2,22 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
 
     <org.oar.bytes.ui.common.components.hints.HintsView
         android:id="@+id/hintsPanel"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp" />
+
+    <org.oar.bytes.ui.common.components.grid.Grid2048View
+        android:id="@+id/grid"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
-
-        <org.oar.bytes.ui.common.components.grid.Grid2048View
-            android:id="@+id/grid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
 </LinearLayout>
