--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -21,6 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
+        <org.oar.bytes.ui.fragments.MainCrankView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
         <org.oar.bytes.ui.fragments.MainGridView
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
