--- a/app/src/main/res/layout/fragment_grid.xml
+++ b/app/src/main/res/layout/fragment_grid.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<org.oar.bytes.ui.common.pager.PageLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:layout_height="wrap_content">
 
-    <org.oar.bytes.ui.common.components.hints.HintsView
-        android:id="@+id/hintsPanel"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
-    <org.oar.bytes.ui.common.components.grid.Grid2048View
-        android:id="@+id/grid"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <org.oar.bytes.ui.common.components.hints.HintsView
+            android:id="@+id/hintsPanel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp" />
 
-</LinearLayout>
+        <org.oar.bytes.ui.common.components.grid.Grid2048View
+            android:id="@+id/grid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+</org.oar.bytes.ui.common.pager.PageLayout>
