--- a/app/src/main/res/layout/fragment_time_energy.xml
+++ b/app/src/main/res/layout/fragment_time_energy.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<org.oar.bytes.ui.common.pager.PageLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content">
 
-    <org.oar.bytes.ui.common.components.devices.TimeEnergyView
-        android:id="@+id/energyDeviceList"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/component_energy_device" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <org.oar.bytes.ui.common.components.devices.TimeEnergyView
+            android:id="@+id/energyDeviceList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/component_energy_device" />
+
+    </LinearLayout>
+</org.oar.bytes.ui.common.pager.PageLayout>
