--- a/app/src/main/res/layout/component_progress_bar.xml
+++ b/app/src/main/res/layout/component_progress_bar.xml
@@ -7,14 +7,14 @@
     android:orientation="horizontal" >
 
     <TextView
-        android:id="@+id/stored"
+        android:id="@+id/mainText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:textSize="22sp" />
 
     <TextView
-        android:id="@+id/maxCapacity"
+        android:id="@+id/secondaryText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="right|bottom"
