--- a/app/src/main/res/layout/fragment_general_crank.xml
+++ b/app/src/main/res/layout/fragment_general_crank.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <org.oar.bytes.ui.common.components.crankpower.CrankPowerView
+        android:id="@+id/crankPower"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:layout_marginBottom="16dp" />
+
     <org.oar.bytes.ui.common.components.crank.CrankView
         android:id="@+id/crankView"
         android:layout_width="match_parent"
